fix quotation marks and multi-pathing to multipathing

--- a/mainmatter/01_introduction.tex
+++ b/mainmatter/01_introduction.tex
@@ -13,7 +13,7 @@ One of the aims for the fifth generation of mobile networks (5G) and it's succes
 
 As there are more heterogeneous edge deployments and more campus networks, backhaul becomes more challenging, since many sites may not have access to optical fibre, and may be forced into using other solutions such as satellite links, mmWave backhaul, or the connections of their Internet Service Provider (ISP). Providing the kind of deterministic quality of service that these sites may require can be a difficult challenge.
 
-Particularly with the rise of satellite backhaul options, fuelled by the new space race, remote deployments may choose to integrate satellite backhaul because fibre is infeasible in their location or its roll-out is too slow. When these connections are added to the site of a deployment it is usually in addition to a pre-existing one. Thus network operators could choose to utilize both the new and the old backhaul connection at the same time, in order to utilize the different qualities of the backhaul links. This bears the question whether multi-pathing could be used to provide deterministic backhaul by intelligently selecting on which links to forward packets. This approach bears similarity to multihoming as well as to multi-path routing in Wireless Sensor Networks (WSNs), and can take inspiration from the substantial body of research in these fields which already exists. That research has demonstrated that using multiple links or paths simultaneously can improve QoS \cite{akella2003measurement, tao2005improving, habib2007improving, goldenberg2004optimizing, huang2008multiconstrained, akella2008performance}, and prompts the question whether something similar could be done to address backhaul in 5G campus networks.
+Particularly with the rise of satellite backhaul options, fuelled by the new space race, remote deployments may choose to integrate satellite backhaul because fibre is infeasible in their location or its roll-out is too slow. When these connections are added to the site of a deployment it is usually in addition to a pre-existing one. Thus network operators could choose to utilize both the new and the old backhaul connection at the same time, in order to utilize the different qualities of the backhaul links. This bears the question whether multipathing could be used to provide deterministic backhaul by intelligently selecting on which links to forward packets. This approach bears similarity to multihoming as well as to multi-path routing in Wireless Sensor Networks (WSNs), and can take inspiration from the substantial body of research in these fields which already exists. That research has demonstrated that using multiple links or paths simultaneously can improve QoS \cite{akella2003measurement, tao2005improving, habib2007improving, goldenberg2004optimizing, huang2008multiconstrained, akella2008performance}, and prompts the question whether something similar could be done to address backhaul in 5G campus networks.
 
 
 %\LTXtable{\textwidth}{tab/scenario1_sensor}
@@ -22,7 +22,7 @@ Particularly with the rise of satellite backhaul options, fuelled by the new spa
 \section{Target}
 \label{sec:target}
 
-The goal of this thesis is to design and provide an implementation of a Wide Area Network connector (WAN connector), that can be placed at the ingress and egress point of two locations. It should then utilize multi-pathing in order to provide deterministic backhaul between the two sites. The performance of this approach will then be quantitatively analyzed in experiments.
+The goal of this thesis is to design and provide an implementation of a Wide Area Network connector (WAN connector), that can be placed at the ingress and egress point of two locations. It should then utilize multipathing in order to provide deterministic backhaul between the two sites. The performance of this approach will then be quantitatively analyzed in experiments.
 
 \begin{figure}[h]
     \centering
@@ -42,7 +42,7 @@ For a 5G deployment the proposed WAN connector could be deployed in between two 
 
 While a high level design will be presented, and a first implementation will be tested, this implementation will not be industry grade and should not be judged next to commercial packet processing products.  Furthermore, an explicit specification for the format of communication with the 5G Core's control plane is largely beyond the scope of this thesis. Although an interface to the 5G Core's Session Management Function (SMF) will be assumed, it is not specified nor implemented. By some means the flows and their requirements must be communicated to the WAN Connector over the control plane, however an exact description of the data formats used in this communication will not occur. The user plane interface to the WAN Connector is not described either. However, the WAN Connector may be able to act in a fashion which is opaque to the user plane component with which it is interacting (RAN or UPF). The WAN Connector can bridge both the N3 or N9 reference points. The user plane traffic is simply forwarded to the WAN Connector and backhauled to the second WAN Connector, which reintroduces it into the other user plane component. No part of the user plane needs to be aware that the WAN Connector is sitting in the middle.
 
-Lastly, in the process of investigating multi-pathing for deterministic backhaul, this thesis will not actually test the WAN Connector in a real deployment at a remote site. Additionally, the tests will not instantiate a full 5G Core network for the tests, and will not feature UPF's, a RAN, nor UE's (like in graphic number \ref{fig:telco}).
+Lastly, in the process of investigating multipathing for deterministic backhaul, this thesis will not actually test the WAN Connector in a real deployment at a remote site. Additionally, the tests will not instantiate a full 5G Core network for the tests, and will not feature UPF's, a RAN, nor UE's (like in graphic number \ref{fig:telco}).
 
 %=======================
 \section{Structure}
