--- a/mainmatter/02_background.tex
+++ b/mainmatter/02_background.tex
@@ -45,7 +45,7 @@ This thesis addresses specifically those campus network deployments which requir
 
 \subsection{Backhaul in 5G}
 
-The first hop from the user equipment (UE) into the mobile network occurs over the air, via wireless signals. This communication is between the UE and the Base Station. The network of different Base Stations is called the Radio Access Network (RAN). Once the user has transmitted its data to the RAN, the RAN is responsible for passing on the user's messages to the core network. The transport network between the RAN and the Core is the backhaul network, or "backbone" \cite{jaber20165g}. However the term backhaul can also be used to refer to the process of transporting data from the RAN back to the core.
+The first hop from the user equipment (UE) into the mobile network occurs over the air, via wireless signals. This communication is between the UE and the Base Station. The network of different Base Stations is called the Radio Access Network (RAN). Once the user has transmitted its data to the RAN, the RAN is responsible for passing on the user's messages to the core network. The transport network between the RAN and the Core is the backhaul network, or “backbone" \cite{jaber20165g}. However the term backhaul can also be used to refer to the process of transporting data from the RAN back to the core.
 
 In light of the increased focus in 5G on enabling time sensitive industrial use cases, the authors in \cite{prados2021asynchronous} proposed a method for integrating asynchronous Time Sensitive Networking (TSN) into 5G backhauling. To achieve this their architecture uses an Asynchronous Traffic Shaper, which is crucial for integrating the time sensitive traffic with the regular traffic. Their solution also utilized frame replication for the delay critical flows defined in the 5G specifications (5G QoS Identifiers (5QIs) 82 through 85).
 
@@ -53,7 +53,7 @@ The authors of \cite{jaber20165g} highlight the need for innovation in 5G backha
 
 Another option for mobile backhaul is satellite constellation networks. Geostationary Orbit satellites (GEO satellites) appear motionless to observers from the ground, and thus provide consistent latency and jitter. However this comes at a cost, they are a large distance away from the earth and round trip times are routinely on the order of 400 to 500 milliseconds. Regardless, GEO satellites are still a crucial means for connectivity for remote regions and areas where it is not possible or very difficult to provide other means of backhaul. Recently, Low-Earth Orbit (LEO) satellite constellations have begun to emerge and represent a more appealing option due to their greatly reduced latencies when compared with GEO satellites \cite{deutschmann2022broadband}. The 3G Public Partnership Project (3GPP), who are behind the 5G specifications, have commissioned a technical report, TR 23.737 \cite{3gpp.23.737}, on possible architectures and integration scenarios for satellite backhaul in 5G. Furthermore, independent studies have also highlighted the usefulness of satellite backhaul for 5G, and identified it as a key enabler of some of the goals set for 5G \cite{artiga2016terrestrial}.
 
-In light of the increased focus on using satellite backhaul, the technical report mentioned above identifies one scenario which pertains exactly to this thesis. The “key issue \#9" in the report: "multi connectivity with hybrid satellite/terrestrial backhaul". The report constructs a specific use case for hybrid backhaul. Consider Additive Layer Manufacturing (ALM) factories, wherein the command and monitoring systems for the automation of the factory require reactivity, and machines in the factory must download the ALM electronic files. This download process will saturate the network resources and requires high bandwidth, conversely the automation processes will need low latency and low bandwidth. In order to meet the different requirements of the two applications, the file transfer could be sent over the satellite backhaul, while the remote command and monitoring could take place over the terrestrial link. Precisely this kind of situation highlights the need for a deterministic multipath backhaul solution for 5G campus networks. Here, this thesis addresses the issue more generally, aiming to develop a system that can handle more backhaul options than just one terrestrial link and one satellite link.
+In light of the increased focus on using satellite backhaul, the technical report mentioned above identifies one scenario which pertains exactly to this thesis. The “key issue \#9" in the report: “multi connectivity with hybrid satellite/terrestrial backhaul". The report constructs a specific use case for hybrid backhaul. Consider Additive Layer Manufacturing (ALM) factories, wherein the command and monitoring systems for the automation of the factory require reactivity, and machines in the factory must download the ALM electronic files. This download process will saturate the network resources and requires high bandwidth, conversely the automation processes will need low latency and low bandwidth. In order to meet the different requirements of the two applications, the file transfer could be sent over the satellite backhaul, while the remote command and monitoring could take place over the terrestrial link. Precisely this kind of situation highlights the need for a deterministic multipath backhaul solution for 5G campus networks. Here, this thesis addresses the issue more generally, aiming to develop a system that can handle more backhaul options than just one terrestrial link and one satellite link.
 
 
 \section{Multipathing and Multihoming}
@@ -70,7 +70,7 @@ In \cite{akella2008performance} the authors collected both passive metrics (look
 
 Considering this result, the solution developed in this work will therefore utilize forms of both active and passive measurements. All three metrics- packet loss, latency, and jitter- will be periodically measured in an active manner. The period over which to perform these measurements is also an important design decision for the WAN connector, and it will be a fixed value, which can be configured by the operator. The use of a fixed value is important in the context of a solution which aims to provide determinism, since traffic may often have hard requirements for the maximum tolerable latency, packet loss, or jitter, which a flow is allowed to experience within a given window. For example in the 5G QoS specifications the averaging window for non delay critical traffic is 2 seconds \cite{3gpp.23.501}.
 
-For classical wired links in multihomed scenarios, \cite{tao2004exploring} have observed that one link will generally dominate with regards to latency, but with brief periods where other links' performance is superior. These same authors also note that with regards to packet loss there is far less prevalence of a "dominant" link, and generally the links will perform comparably. Packet loss is also a particularly difficult metric to measure, since most links are highly reliable and when they do experience packet loss it is in bursts \cite{tao2004exploring}. Wireless connections are usually less reliable and may experience more consistent rates of packet loss at the data link layer, however often this is opaque from the perspective of the higher layers and hard to perceive.
+For classical wired links in multihomed scenarios, \cite{tao2004exploring} have observed that one link will generally dominate with regards to latency, but with brief periods where other links' performance is superior. These same authors also note that with regards to packet loss there is far less prevalence of a “dominant" link, and generally the links will perform comparably. Packet loss is also a particularly difficult metric to measure, since most links are highly reliable and when they do experience packet loss it is in bursts \cite{tao2004exploring}. Wireless connections are usually less reliable and may experience more consistent rates of packet loss at the data link layer, however often this is opaque from the perspective of the higher layers and hard to perceive.
 
 Ultimately, many of the best performing approaches for predicting packet loss, e.g. Hidden Markov Models \cite{tao2004exploring, bremler2002predicting}, are still somewhat imprecise and inaccurate. These models assume the link is in one of two states, good or bad, and each state has a different probability for packet loss, and there is a transition matrix which represents the probabilities of switching from one state to another.
 
@@ -80,7 +80,7 @@ Multipath routing approaches, as well as interface selection in multi-homed envi
 
 Wireless Sensor Networks (WSN's) are often deployed in challenging environments and must construct their routing tables dynamically. Research into multipath routing solutions for providing QoS guarantees in WSN's can serve as inspiration for this thesis' approach. In  \cite{huang2008multiconstrained}, the authors address QoS provisioning in a WSN, using multipath routing. Their approach is to formulate the problem as a probabilistic programming problem and then convert it to a linear programming problem using an approximation technique. When solved, the equation they use to represent the problem yields which paths packets should be sent on (or duplicated on) in order to achieve the desired reliability. Only those paths which would guarantee the maximum latency is still below the QoS requirements are considered. This approach bears similarity to how \cite{prados2021asynchronous} (discussed earlier) uses frame replication for certain flows.
 
-Another article which deserves mentioning is the work in \cite{akella2008performance}. Here, the authors evaluate a large set of route-control mechanisms and evaluate their trade-offs for multihomed enterprises, in order to derive "best common practices" for multihoming. Their most important results shows that there is no benefit to using historical samples; route selection should always be based on current samples. They even find that employing historical data to make decisions about which path to forward on can prove detrimental at times.
+Another article which deserves mentioning is the work in \cite{akella2008performance}. Here, the authors evaluate a large set of route-control mechanisms and evaluate their trade-offs for multihomed enterprises, in order to derive “best common practices" for multihoming. Their most important results shows that there is no benefit to using historical samples; route selection should always be based on current samples. They even find that employing historical data to make decisions about which path to forward on can prove detrimental at times.
 
 We may also look at the work in \cite{habib2007improving}, where the authors investigate the use of residential multihoming to improve QoS. Their work suggests that even the use of a rudimentary switching algorithm is enough to improve QoS by switching the outgoing ISP based on \textit{any} metric. The authors observed that most of the time, the decision to switch ISP's based on one metric is consistent with the decision that would be made by considering the other metrics.
 
@@ -98,7 +98,7 @@ Lastly, we can look to the work in \cite{goldenberg2004optimizing}, which also a
 
 Whilst TSN is able to provide the desired reliability and timing that critical applications require, there is a need for this sort of support in networks which are too large to be classified as Local Area Networks (LANs) \cite{detnet-use-cases, detnet-problem-statement}. To this extent, Deterministic Networking aims to enable the migration of applications suited for TSN's to larger packet switched networks, while maintaining support for existing packet network applications over the same physical network \cite{detnet-problem-statement}.
 
-In this thesis, "determinism" does not refer to the IETF DetNet Working Group's definition. However it is still important to consider their specifications and their definition of a Deterministic Network (DetNet), from which our own definition of deterministic backhaul can be built.
+In this thesis, “determinism" does not refer to the IETF DetNet Working Group's definition. However it is still important to consider their specifications and their definition of a Deterministic Network (DetNet), from which our own definition of deterministic backhaul can be built.
 
 The Deterministic Networking Problem Statement contains certain requirements of the network as a whole. These are not possible for this thesis, which addresses backhaul over resources which are not controlled by the operator. The WAN Connector, once implemented, will only be able to select from the available backhaul connections, it has no control over their network. Beyond this however, the problem statement's definition of determinism can be used. This entails absolute guarantees of minimum and maximum latency as well as packet loss and jitter, and secondly the use of more than half of the network's bandwidth. The latter is a crucial aspect of the definition since it prohibits massive over-provisioning of resources, which is an inefficient solution.
 
@@ -112,7 +112,7 @@ The first solution to this problem lies in properly sized buffers, another solut
 
 Beyond mitigating bufferbloat, traffic shaping can still be crucial for latency sensitive applications. Contention loss and queuing delays can be avoided by smoothing out any large bursts of packets. Furthermore, which traffic shaper to use is a fundamental design decision that must be made. If a link is kept busy at all times, so that maximum throughput is achieved, it means that latency critical packets may not always be forwarded on time. Conversely, by reserving some portion of the bandwidth in case latency sensitive traffic arrives, the full bandwidth cannot be used at all times and thus the throughput is reduced. This is a fundamental trade-off which cannot be avoided.
 
-%A traffic shaper is also important for reducing packet loss. In packet switched networks the only source of packet loss which does not arise from a lower layer is when packets are dropped due to buffers overflowing. This occurs naturally in networks with "bursty" traffic because the natural distribution of bursts of packets mean that occasionally there will be overlapping bursts of packets which cause a link to become congested and drop packets. This is where traffic shaping and queue management is crucial. The bursts may be smoothed out before the bottleneck link, by releasing packets at a slower rate or dropping those that can afford being dropped (if there are any!). It should be noted that a similar effect can also be achieved through resource reservation and/or through a scheduler which makes sure to never over-schedule the network's resources. However this requires exact knowledge of the maximum bandwidth requirements of all the packet flows in the network.
+%A traffic shaper is also important for reducing packet loss. In packet switched networks the only source of packet loss which does not arise from a lower layer is when packets are dropped due to buffers overflowing. This occurs naturally in networks with “bursty" traffic because the natural distribution of bursts of packets mean that occasionally there will be overlapping bursts of packets which cause a link to become congested and drop packets. This is where traffic shaping and queue management is crucial. The bursts may be smoothed out before the bottleneck link, by releasing packets at a slower rate or dropping those that can afford being dropped (if there are any!). It should be noted that a similar effect can also be achieved through resource reservation and/or through a scheduler which makes sure to never over-schedule the network's resources. However this requires exact knowledge of the maximum bandwidth requirements of all the packet flows in the network.
 
 
 A traffic shaper is also important for reducing packet loss. By releasing packets at a slower rate or dropping those that can afford to be dropped, bursts of packets may be smoothed out before they overflow a bottleneck link. It should be noted that a similar effect can also be achieved through resource reservation and/or through a scheduler which makes sure to never over-schedule the network's resources. However this requires exact knowledge of both the bandwidth requirements of all the packet flows in the network, as well as the maximum bandwidth of all the links in the network.
