--- a/backmatter/03_patch.tex
+++ b/backmatter/03_patch.tex
@@ -5,7 +5,7 @@
 \chapter{GTP Patch for the BPF Flow Dissector}
 \label{appendix:patch}
 
-As was mentioned in the "Design" chapter (\ref{cha:design}), in a real 5G Campus deployment the messages between the UPF (or RAN) and the WAN Connector will be carrying GTP packets. Because GTP encapsulates messages inside a UDP message, the linux kernel will think that all GTP belong to the same flow, when in actuality they may be tunneling multiple different flows. In order for the tc-cake traffic shaper in the linux kernel to be able to detect the packets being tunneled, a custom BPF flow dissector must be used \footnote{https://www.kernel.org/doc/html/v5.1/networking/bpf\_flow\_dissector.html\#overview}.
+As was mentioned in the Design chapter (\ref{cha:design}), in a real 5G Campus deployment the messages between the UPF (or RAN) and the WAN Connector will be carrying GTP packets. Because GTP encapsulates messages inside a UDP message, the linux kernel will think that all GTP belong to the same flow, when in actuality they may be tunneling multiple different flows. In order for the tc-cake traffic shaper in the linux kernel to be able to detect the packets being tunneled, a custom BPF flow dissector must be used \footnote{https://www.kernel.org/doc/html/v5.1/networking/bpf\_flow\_dissector.html\#overview}.
 
 The linux kernel's source code provides a simple example of a dissector which removes the tunnel headers for various protocols, e.g. Generic Routing Encapsulation (GRE) or IP in IP tunneling (IPIP). Unfortunately a GTP dissector is not included in this set, but it is a straightforward patch to add it.
 
