--- a/frontmatter/summary.tex
+++ b/frontmatter/summary.tex
@@ -22,4 +22,4 @@ Mit der Verbreitung von 5G rückt die von speziellen Applikationen benötigte Se
 
 Diese Arbeit implementiert einen Ansatz der verschiedene ausgehende Pfade benutzt und schlägt eine Lösung für die 5G Campus Umgebung vor, die für 5G Flows einen deterministischen Backhaul bereitstellt. Hierzu wird eine Architektur entworfen, die über ausgehende Pfade Daten sammelt, und anhand einer binären Optimierungsgleichung Entscheidungen trifft. Zusätzlich bietet dieser Lösungsansatz geteilte Steuerungs und Datenebenen, sowie einen Traffic Shaper, und stellt eine Konfiguration spezifisch für 5G Campus Netze vor.
 
-In einem Testbed, dass Multipath Szenarien emuliert, wird diese Lösung, der sogenannte "WAN Connector", auf ihre deterministischen Eigenschaften untersucht. Die Ergebnisse weisen leider nach dass die Lösung keinen kompletten Determinismus anbieten kann. In der Frage der Latenz agiert die hier untersuchte und vorgeschlagene Methodik 80\% optimal, und schafft es die Latenz insgesamt zu verringern. Den Jitter zu reduzieren gelingt aber nicht, und auch der Durchsatz von Flows, die für Paketverluste und Zuverlässigkeit optimiert werden, wird extrem reduziert. Dennoch war es möglich, durch die Nutzung von Pfad-wechsel und Replikation, die Paketverluste stärker zu verringern als es mit einen Orakel der Einzelne-Pfade auswählen kann möglich gewesen wäre.
+In einem Testbed, dass Multipath Szenarien emuliert, wird diese Lösung, der sogenannte “WAN Connector", auf ihre deterministischen Eigenschaften untersucht. Die Ergebnisse weisen leider nach dass die Lösung keinen kompletten Determinismus anbieten kann. In der Frage der Latenz agiert die hier untersuchte und vorgeschlagene Methodik 80\% optimal, und schafft es die Latenz insgesamt zu verringern. Den Jitter zu reduzieren gelingt aber nicht, und auch der Durchsatz von Flows, die für Paketverluste und Zuverlässigkeit optimiert werden, wird extrem reduziert. Dennoch war es möglich, durch die Nutzung von Pfad-wechsel und Replikation, die Paketverluste stärker zu verringern als es mit einen Orakel der Einzelne-Pfade auswählen kann möglich gewesen wäre.
